# evolution-api-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PUBLISHING.md  README.md  __init__.py  analysis_endpoints.md  client.py  endpoint_mapping.md  pyproject.toml  pytest.ini  setup.py
evolution_api_sdk/: client.py  exception.py
evolution_api_sdk/models/: __init__.py  chat.py  chatwoot.py  group.py  instance.py  message.py  profile.py  rabbitmq.py  settings.py  typebot.py  websocket.py
evolution_api_sdk/service/: chat.py  chatwoot.py  group.py  message.py  profile.py  rabbitmq.py  typebot.py  webhook.py  websocket.py
models/: __init__.py  chat.py  chatwoot.py  group.py  message.py  profile.py  rabbitmq.py  typebot.py  webhook.py  websocket.py
service/: __init__.py  chat.py  chatwoot.py  group.py  instance.py  message.py  profile.py  rabbitmq.py  settings.py  typebot.py  webhook.py  websocket.py
tests/: test_client.py  test_service_chat.py  test_service_chatwoot.py  test_service_group.py  test_service_instance.py  test_service_message.py  test_service_profile.py  test_service_rabbitmq.py  test_service_settings.py  test_service_typebot.py  test_service_webhook.py  test_service_websocket.py
