[project]
name = "evolution-api-sdk"
version = "0.1.0"
description = "SDK for interacting with the Evolution API"
authors = [
    { name = "Júnior Carvalho", email = "joseadolfojr@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "pytest==8.3.4",
    "requests-toolbelt==1.0.0",
]
